# 2019-1-CECD3-Binary-1

./: .env  .gitignore  docker-compose.yml
Backend/: .gitignore  LICENSE  app.js  conf.json  mobius.js  pxy_coap.js  pxy_mqtt.js  pxy_ws.js
Backend/App/: .env  app.ts  package.json
Backend/mobius/: ae.js  asn.js  cb.js  cin.js  csr.js  db_action.js  fopt.js  grp.js  mgo.js  mms.js  mn.js  nod.js  req.js  resource.js  responder.js  sgn.js  smd.js  sql_action.js  sub.js  tm.js  tr.js  ts.js  ts_agent.js  tsi.js
Camera/: http_adn.js  mqtt_adn.js  mqtt_app.js  noti.js  thyme_tas.js
Drone/: coap_adn.js  coap_app.js  conf.js  http_adn.js  mqtt_app.js  thyme.js  thyme_tas.js
Drone/Camera/: conf.js  http_app.js  package-lock.json  ws_adn.js  ws_app.js
Drone/DroneControl/: mavsdkinstall.sh  simulation.sh
Drone/DroneControl/getGPS/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  drone_control.cpp  drone_control.h  drone_service  drone_service.cbp  main.cpp  main.h  simulation.sh  unix_domain_socket.cpp  unix_domain_socket.h
Drone/mavsdk_example/: readme.md
Drone/pxy_rtsp2ws/: app.js
Frontend/: package.json
Frontend/public/: index.html  jsmpeg-player.min.js
Frontend/src/: App.js  index.js
GCS/: feed1.ffm  gradle.properties  settings.gradle
GCS/app/: build.gradle  proguard-rules.pro
Gateway/: .gitignore  app.js  conf_mn.json  package.json  pxy_coap.js  pxy_mqtt.js  pxy_ws.js  rosemary.js  wdt.js
Gateway/App/: app.ts  package.json
Gateway/mobius/: acp.js  asn.js  cb.js  cnt.js  db_action.js  fopt.js  grp.js  (+10 more)
Test/: app.js  package.json
(+863 files in other folders)
